fixing spacing for mobile title

--- a/static/main.css
+++ b/static/main.css
@@ -16,7 +16,8 @@ body {
   padding: 30px;
  }
  body h1 {
-  font-size: 42px;
+  font-size: 43px;
+  letter-spacing: 2px;
  }
  body h2 {
   padding-bottom: 40px;
